Update release notes, fixes #1537